--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
               sans: ['Poppins', 'sans-serif'],
             },
             colors: {
-              'brand-dark': '#0F172A', // slate-900
-              'brand-medium': '#1E293B', // slate-800
-              'brand-light': '#334155', // slate-700
-              'brand-accent': '#14B8A6', // teal-500
-              'brand-accent-hover': '#0D9488', // teal-600
-              'brand-text': '#E2E8F0', // slate-200
-              'brand-text-dark': '#94A3B8', // slate-400
+              'primary': '#0F172A', // Slate 900 for main text
+              'secondary': '#475569', // Slate 600 for secondary text
+              'accent': '#14B8A6', // Teal 500
+              'accent-hover': '#0D9488', // Teal 600
+              'background': '#FFFFFF',
+              'background-alt': '#F8FAFC', // Slate 50
+              'border': '#E2E8F0', // Slate 200
             },
             animation: {
               'fade-in-up': 'fadeInUp 1s ease-out forwards',
@@ -55,15 +55,15 @@
         width: 8px;
       }
       ::-webkit-scrollbar-track {
-        background: #0F172A;
+        background: #F8FAFC;
       }
       ::-webkit-scrollbar-thumb {
-        background-color: #1E293B;
+        background-color: #CBD5E1;
         border-radius: 10px;
-        border: 2px solid #0F172A;
+        border: 2px solid #F8FAFC;
       }
        ::-webkit-scrollbar-thumb:hover {
-        background-color: #334155;
+        background-color: #94A3B8;
       }
     </style>
   <script type="importmap">
@@ -75,9 +75,8 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-brand-dark text-brand-text font-sans antialiased">
+  <body class="bg-background text-primary font-sans antialiased">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
